<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/iconhome"
        android:title="@string/home"
        android:orderInCategory="1"
         />
    <item
        android:id="@+id/action_calender"
        android:icon="@drawable/iconplanner"
        android:orderInCategory="2"
        android:title="@string/calendar"
       />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/iconnotification"
        android:orderInCategory="3"
        android:title="@string/notifications"
        />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/iconusermale"
        android:orderInCategory="4"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/iconinfo"
        android:orderInCategory="5"
        android:title="@string/about"
       />
</menu>